@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-19T16:38:18Z",
+  "timestamp" : "2022-05-20T01:09:10Z",
   "count_outdated" : 52,
   "uniques_outdated" : 33,
-  "count" : 98,
-  "uniques" : 63,
+  "count" : 92,
+  "uniques" : 58,
   "clones" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
+      "count": 1,
+      "count_minmax": [ 1, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 6 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
