@@ -1,11 +1,11 @@
 {
-  "count": 46,
+  "count": 40,
   "uniques": 18,
   "clones": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 7,
-      "uniques": 6
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
