@@ -1,3 +1,10 @@
+2022-05-20T01:09:10Z:
+* notice: last 14d: unq all: 18 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 33 52 / 63 98
+* notice: next accum: outdated-unq outdated-all / unq all: 33 52 / 58 92
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -5 -6 / +0 +0 -5 -6 / 1 1
+* notice: changed dates: [2022-05-06]
+
 2022-05-19T16:38:18Z:
 * notice: last 14d: unq all: 18 46
 * notice: prev accum: outdated-unq outdated-all / unq all: 29 44 / 62 97
